fix: change height to fix cutoff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.h-header-actual {
+  height: 64px;
+  min-height: 64px;
+  max-height: 64px;
+}
+
 .h-header {
   height: calc(100vh - 64px);
   max-height: calc(100vh - 64px);
